fixes overflow issue with contact button

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -148,6 +148,7 @@ $paragraph-size: 1.3rem;
     left: 5%;
     width: 85px;
     text-align: center;
+    overflow-x: hidden;
     transition: all 300ms ease-in-out;
 }
 
